done: review-write/detail, photo picker done next: review-write/... rest

--- a/trial01/my-farm-01/angular.json
+++ b/trial01/my-farm-01/angular.json
@@ -32,7 +32,7 @@
               }
             ],
             "styles": ["src/theme/variables.scss", "src/global.scss"],
-            "scripts": [],
+            "scripts": ["node_modules/jquery/dist/jquery.min.js"],
             "aot": false,
             "vendorChunk": true,
             "extractLicenses": false,
@@ -122,10 +122,7 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
         },
         "e2e": {
