--- a/trial01/my-farm-01/package.json
+++ b/trial01/my-farm-01/package.json
@@ -13,22 +13,28 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@capacitor-community/capacitor-googlemaps-native": "^1.2.0",
     "@capacitor/android": "3.4.3",
     "@capacitor/app": "1.1.1",
     "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "3.4.3",
     "@capacitor/filesystem": "^1.1.0",
+    "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/google-maps": "^5.5.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
+    "cordova-plugin-googlemaps": "^2.7.1",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -46,6 +52,7 @@
     "@angular/language-service": "~13.2.2",
     "@capacitor/cli": "3.4.3",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.14",
