--- a/trial01/my-farm-01/package.json
+++ b/trial01/my-farm-01/package.json
@@ -31,8 +31,10 @@
     "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
+    "dotenv": "^16.0.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
+    "swiper": "^8.0.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
