--- a/trial01/my-farm-01/package.json
+++ b/trial01/my-farm-01/package.json
@@ -29,8 +29,9 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic-native/core": "^5.36.0",
-    "@ionic/angular": "^6.0.0",
+    "@ionic/angular": "^6.0.13",
     "@ionic/pwa-elements": "^3.1.1",
+    "@types/swiper": "^6.0.0",
     "dotenv": "^16.0.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
