--- a/trial01/my-farm-01/tsconfig.json
+++ b/trial01/my-farm-01/tsconfig.json
@@ -13,7 +13,7 @@
     "target": "es2015",
     "module": "es2020",
     "lib": ["es2018", "dom"],
-    "types": ["jquery", "bootstrap", "signalr"]
+    "types": ["jquery", "bootstrap", "signalr", "swiper"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
