--- a/trial01/my-farm-01/package.json
+++ b/trial01/my-farm-01/package.json
@@ -32,6 +32,7 @@
     "@ionic/angular": "^6.0.13",
     "@ionic/pwa-elements": "^3.1.1",
     "@types/swiper": "^6.0.0",
+    "angular-cli-ghpages": "^1.0.0",
     "dotenv": "^16.0.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
