--- a/trial01/my-farm-trial02/package.json
+++ b/trial01/my-farm-trial02/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@capacitor/app": "1.1.1",
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "3.5.0",
+    "@capacitor/filesystem": "^1.1.0",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
     "@ng-bootstrap/ng-bootstrap": "^12.1.1",
     "@popperjs/core": "^2.11.5",
     "@types/gsap": "^3.0.0",
