--- a/trial01/my-farm-01/package.json
+++ b/trial01/my-farm-01/package.json
@@ -36,10 +36,12 @@
     "@ionic/storage-angular": "^3.0.6",
     "@ng-bootstrap/ng-bootstrap": "^12.0.2",
     "@popperjs/core": "^2.11.5",
+    "@types/gsap": "^3.0.0",
     "@types/swiper": "^6.0.0",
     "angular-cli-ghpages": "^1.0.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "gsap": "^3.10.4",
     "jquery": "^3.6.0",
     "jsqr": "^1.4.0",
     "rxjs": "~6.6.0",
